tests/baselines/reference/implicitAnyDeclareMemberWithoutType.errors.txt
==== tests/cases/compiler/implicitAnyDeclareMemberWithoutType.ts (8 errors) ====
    // this should be an error
    interface IFace {
        member1;  // error at "member1"
        ~~~~~~~
!!! implicitAnyDeclareMemberWithoutType.ts(3,5): error TS7005: Variable 'member1' implicitly has an 'any' type.
        member2: string;
        constructor(c1, c2: string, c3);  // error at "c1, c3, "constructor"
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! implicitAnyDeclareMemberWithoutType.ts(5,5): error TS7010: 'constructor', which lacks return-type annotation, implicitly has an 'any' return type.
                    ~~
!!! implicitAnyDeclareMemberWithoutType.ts(5,17): error TS7006: Parameter 'c1' of 'constructor' implicitly has an 'any' type.
                                    ~~
!!! implicitAnyDeclareMemberWithoutType.ts(5,33): error TS7006: Parameter 'c3' of 'constructor' implicitly has an 'any' type.
        funcOfIFace(f1, f2, f3: number);   // error at "f1, f2, funcOfIFace"
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! implicitAnyDeclareMemberWithoutType.ts(6,5): error TS7010: 'funcOfIFace', which lacks return-type annotation, implicitly has an 'any' return type.
                    ~~
!!! implicitAnyDeclareMemberWithoutType.ts(6,17): error TS7006: Parameter 'f1' of 'funcOfIFace' implicitly has an 'any' type.
                        ~~
!!! implicitAnyDeclareMemberWithoutType.ts(6,21): error TS7006: Parameter 'f2' of 'funcOfIFace' implicitly has an 'any' type.
        new ();
        ~~~~~~
!!! implicitAnyDeclareMemberWithoutType.ts(7,5): error TS7013: Constructor signature, which lacks return-type annotation, implicitly has an 'any' return type.
    }
    